--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <a href="https://twitter.com/Chan_Wright_">Twitter</a>
     </aside>
     <footer>
-      Background Image: “The Building.” Lowell, MA | Official Website, Lowell City Hall, www.lowellma.gov/1070/Tax-Incentives. 
+      Background image was taken by me on a ski trip in the 9th grade. 
     </footer>    
   </body>  
 </html>
