Updated the video links to the embedded versions

--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
         <h2>Some of my favorite YouTube videos</h2>
         <p>
         <ul>
-        <li><iframe width="640" height="360" src="https://www.youtube.com/watch?v=582gOjcA8DY"></iframe></li>
-        <li><iframe width="640" height="360" src="https://www.youtube.com/watch?v=DvkY9-mLsgI"></iframe></li>
-        <li><iframe width="640" height="360" src="https://www.youtube.com/watch?v=Tj8M3zWOeC8"></iframe></li> 
+        <li><iframe width="560" height="315" src="https://www.youtube.com/embed/582gOjcA8DY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
+        <li><iframe width="560" height="315" src="https://www.youtube.com/embed/DvkY9-mLsgI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
+        <li><iframe width="560" height="315" src="https://www.youtube.com/embed/Tj8M3zWOeC8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li> 
         </ul>
         </p>
       </section>      
