--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <nav>
       <a href="index.html">Home</a>
       <a href="contact.html">Contact</a>
+      <a href="triArea.html">Triangle Area</a>
     </nav>
     <hr>
     <header>
