--- a/contact.html
+++ b/contact.html
@@ -11,6 +11,7 @@
     <nav>
       <a href="index.html">Home</a>
       <a href="contact.html">Contact</a>
+      <a href="triArea.html">Triangle Area</a>
     </nav>
     <header>
     <h1>Contact Chandler Wright</h1>
