Trying to bug fix
Calculation isn't being done

--- a/triArea.html
+++ b/triArea.html
@@ -33,7 +33,7 @@
         </td>
       </tr>
     </table>
-    <button onclick="calcTriArea(); return false">
+    <button onclick="calcTriArea();">
       Calculate Area
     </button>
     <h2>
