--- a/triArea.html
+++ b/triArea.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link href="style.css" rel="stylesheet"> 
-    <script src="triangleCalc.js"></script>
+    <script src="https://raw.githubusercontent.com/chanWright/about-me/master/triangleCalc.js"></script>
   </head>
   <body>
     <nav>
