Changed name of something to force update

--- a/triArea.html
+++ b/triArea.html
@@ -23,13 +23,13 @@
       <tr>
         <td>Base</td>
         <td>
-          <input type="text" id = "baseText" name = "triBase" value = "" class = "inlong">
+          <input type="text" id = "baseText" name = "triangleBase" value = "" class = "inlong">
         </td>
       </tr>
       <tr>
         <td>Height</td>
         <td>
-          <input type="text" id = "heightText" name = "triHeight" value = "" class = "inlong">
+          <input type="text" id = "heightText" name = "triangleHeight" value = "" class = "inlong">
         </td>
       </tr>
     </table>
